--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="utf-8">
 		<title>Home |</title>
 		<link rel="shortcut icon" href="#">
 		<link href="recourses/css/main_style.css" rel="stylesheet" type="text/css">
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.16/vue.min.js">
+        </script>
+        <script src="https://cdn.emailjs.com/dist/email.min.js" type="text/javascript">
+        </script>
 		<script type="text/javascript" src="recourses/js/main.js"></script>
 		<style type="text/css">
 			#container{
@@ -28,14 +33,19 @@
 			<a href="contact_with_me.html"><div class="option two">CONTACTAME</div></a>
 		</div>
 		<div id="container">
-			<div id="participe-button">
-				<button><a href="contact_with_me.html"><strong>Participar GRATIS</strong></a></button>
-			</div>
-			<div id="presenter">
-				<p>Hola, mi nombre es Myron y soy un Web Developer de nivel intermedio y he decedido crear este proyecto para ayudarte con tu pagina web y de paso llenar mi portafolio.</p>
-				<p style="margin-top: 10px;">Puedo convertir <em>TU IDEA</em> en una PAGINA WEB desde ZERO y encima es completamente <strong>GRATIS</strong>.</p>
+			<div id="central-elements">
+				<section id="presenter">
+					<div>
+						<p>Hola, mi nombre es Myron y soy un Web Developer de nivel intermedio y he decedido crear este proyecto para ayudarte con tu pagina web y de paso llenar mi portafolio.</p>
+						<p style="margin-top: 10px;">Puedo convertir <em>TU IDEA</em> en una PAGINA WEB desde ZERO y encima es completamente <strong>GRATIS</strong>.</p>
+					</div>
+				</section>
+				<div id="participe-button">
+					<button><a href="contact_with_me.html"><strong>Participar GRATIS</strong></a></button>
+				</div>
 			</div>
 		</div>
 		<div id="bg-cover" onclick="menu_disappear()"></div>
+		<div id="bg-img-cover"></div>
 	</body>
 </html>
