--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
 				position: absolute;
 				width: 100%;
 				height: 100%;
-				background-image: url( 'recourses/images/pared.jpg' );
-				background-size: 100% 110%;
+				/*background-image: url( 'recourses/images/pared.jpg' );*/
+				background: white;
+				background-size: 100% 100%;
+				min-height: 100%;
+				overflow: hidden;
 			}
 		</style>
 	</head>
@@ -46,6 +49,5 @@
 			</div>
 		</div>
 		<div id="bg-cover" onclick="menu_disappear()"></div>
-		<div id="bg-img-cover"></div>
 	</body>
 </html>
