--- a/contact_with_me.html
+++ b/contact_with_me.html
@@ -12,8 +12,8 @@
 				position: absolute;
 				width: 100%;
 				height: 100%;
-				/*background-image: url( 'recourses/images/pared.jpg' );*/
-				background: white;
+				background-image: url( 'recourses/images/pared.jpg' );
+				/*background: white;*/
 				background-size: 100% 110%;
 				min-height: 100%;
 			}
