--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 				position: absolute;
 				width: 100%;
 				height: 100%;
-				/*background-image: url( 'recourses/images/pared.jpg' );*/
-				background: white;
+				background-image: url( 'recourses/images/pared.jpg' );
+				/*background: white;*/
 				background-size: 100% 100%;
 				min-height: 100%;
 				overflow: hidden;
@@ -49,5 +49,6 @@
 			</div>
 		</div>
 		<div id="bg-cover" onclick="menu_disappear()"></div>
+		<div id="bg-img-cover"></div>
 	</body>
 </html>
